k8s/openvas/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openvas-service
spec:
  selector:
    app: openvas-scanner
  ports:
    - port: 80
      targetPort: 9392
