k8s/openvas/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openvas-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: openvas.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openvas-service
                port:
                  number: 80
